--- a/index.css
+++ b/index.css
@@ -5,9 +5,10 @@
 
 body {
 	text-align: center;
-	background-color: #000;
 	color: #fff;
 	font-size: 18px;
+	background: -webkit-linear-gradient(to right, #c31432, #240b36);
+	background: linear-gradient(to right, #c31432, #240b36);
 }
 
 audio {
@@ -17,6 +18,16 @@ audio {
 	overflow: hidden;
 	width: 100%;
 	height: 700px;
+	position: relative;
+	-webkit-mask: linear-gradient(#000 calc(100% - 20em), transparent);
+}
+.blur {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	width: 100%;
+	height: 25%;
 }
 ul {
 	transform: translateY(-200px);
