--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ audio {
 	width: 100%;
 	height: 700px;
 	position: relative;
-	-webkit-mask: linear-gradient(#000 calc(100% - 20em), transparent);
+	-webkit-mask: linear-gradient(transparent 0%, #000 40% 60%, transparent 100%);
 }
 .blur {
 	position: absolute;
